tenants/ikedadev/portfolio/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-svc
  namespace: ikedadev-apps
spec:
  selector:
    app: ikeda-portfolio
  ports:
    - port: 80
      targetPort: 80
