tenants/ikedadev/portfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: ikedadev-apps
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - ikedadev.com
    secretName: ikedadev-com-tls 
  rules:
  - host: ikedadev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-svc
            port:
              number: 80
